mozart-parser.output
Terminals unused in grammar

   LOOP
   GREATEREQUAL
   LOWEREQUAL
   LOWER
   NOTEQUAL
   NOT
   EQUAL
   OR
   AND
   SCALEKEYWORD
   RETURNSTMT


Grammatica

    0 $accept: LINE $end

    1 LINE: /* vuoto */
    2     | LINE VARDECL ENDOFSTMT
    3     | LINE EXPR ENDOFSTMT
    4     | LINE LOGICEXPR ENDOFSTMT
    5     | LINE IFSTMT ENDOFSTMT
    6     | LINE FUNCTION ENDOFSTMT

    7 VARDECL: VAR ID COLON INTKEYWORD ASSIGNMENT EXPR
    8        | VAR ID COLON FLOATKEYWORD ASSIGNMENT EXPR
    9        | VAR ID COLON BOOLEANKEYWORD ASSIGNMENT EXPR
   10        | VAR ID COLON STRINGKEYWORD ASSIGNMENT EXPR

   11 IFSTMT: IF LPAREN LOGICEXPR RPAREN STARTOFSCOPE LINE ELSE LINE ENDOFSCOPE
   12       | IF LPAREN LOGICEXPR RPAREN STARTOFSCOPE LINE ENDOFSCOPE

   13 FUNCTION: FUNCTIONDECL LPAREN VARDECL RPAREN STARTOFSCOPE LINE ENDOFSCOPE
   14         | FUNCTIONDECL LPAREN RPAREN STARTOFSCOPE LINE ENDOFSCOPE

   15 LOGICEXPR: TRUEVAL
   16          | FALSEVAL
   17          | EXPR GREATER EXPR

   18 EXPR: EXPR PLUS EXPR
   19     | EXPR MINUS EXPR
   20     | EXPR PER EXPR
   21     | EXPR DIV EXPR
   22     | EXPR MOD EXPR
   23     | LPAREN EXPR RPAREN
   24     | TYPEVAL
   25     | ID

   26 TYPEVAL: INTEGERTYPE
   27        | FLOATTYPE
   28        | BOOLEANTYPE
   29        | STRINGTYPE


Simboli terminali e regole in cui appaiono

$end (0) 0
error (256)
VAR (258) 7 8 9 10
COLON (259) 7 8 9 10
IF (260) 11 12
ELSE (261) 11
LOOP (262)
STARTOFSCOPE (263) 11 12 13 14
ENDOFSCOPE (264) 11 12 13 14
ASSIGNMENT (265) 7 8 9 10
LPAREN (266) 11 12 13 14 23
RPAREN (267) 11 12 13 14 23
ENDOFSTMT (268) 2 3 4 5 6
PLUS (269) 18
MINUS (270) 19
PER (271) 20
DIV (272) 21
MOD (273) 22
GREATEREQUAL (274)
LOWEREQUAL (275)
GREATER (276) 17
LOWER (277)
NOTEQUAL (278)
NOT (279)
EQUAL (280)
OR (281)
AND (282)
TRUEVAL (283) 15
FALSEVAL (284) 16
INTKEYWORD (285) 7
FLOATKEYWORD (286) 8
BOOLEANKEYWORD (287) 9
STRINGKEYWORD (288) 10
SCALEKEYWORD (289)
FUNCTIONDECL (290) 13 14
RETURNSTMT (291)
ID (292) 7 8 9 10 25
INTEGERTYPE (293) 26
FLOATTYPE (294) 27
BOOLEANTYPE (295) 28
STRINGTYPE (296) 29


Simboli nonterminali e regole in cui appaiono

$accept (42)
    nel primo membro: 0
LINE (43)
    nel primo membro: 1 2 3 4 5 6, nel secondo membro: 0 2 3 4 5 6
    11 12 13 14
VARDECL (44)
    nel primo membro: 7 8 9 10, nel secondo membro: 2 13
IFSTMT (45)
    nel primo membro: 11 12, nel secondo membro: 5
FUNCTION (46)
    nel primo membro: 13 14, nel secondo membro: 6
LOGICEXPR (47)
    nel primo membro: 15 16 17, nel secondo membro: 4 11 12
EXPR (48)
    nel primo membro: 18 19 20 21 22 23 24 25, nel secondo membro:
    3 7 8 9 10 17 18 19 20 21 22 23
TYPEVAL (49)
    nel primo membro: 26 27 28 29, nel secondo membro: 24


stato 0

    0 $accept: . LINE $end

    $default  riduzione con la regola 1 (LINE)

    LINE  prosecuzione allo stato 1


stato 1

    0 $accept: LINE . $end
    2 LINE: LINE . VARDECL ENDOFSTMT
    3     | LINE . EXPR ENDOFSTMT
    4     | LINE . LOGICEXPR ENDOFSTMT
    5     | LINE . IFSTMT ENDOFSTMT
    6     | LINE . FUNCTION ENDOFSTMT

    $end          shift e prosecuzione allo stato 2
    VAR           shift e prosecuzione allo stato 3
    IF            shift e prosecuzione allo stato 4
    LPAREN        shift e prosecuzione allo stato 5
    TRUEVAL       shift e prosecuzione allo stato 6
    FALSEVAL      shift e prosecuzione allo stato 7
    FUNCTIONDECL  shift e prosecuzione allo stato 8
    ID            shift e prosecuzione allo stato 9
    INTEGERTYPE   shift e prosecuzione allo stato 10
    FLOATTYPE     shift e prosecuzione allo stato 11
    BOOLEANTYPE   shift e prosecuzione allo stato 12
    STRINGTYPE    shift e prosecuzione allo stato 13

    VARDECL    prosecuzione allo stato 14
    IFSTMT     prosecuzione allo stato 15
    FUNCTION   prosecuzione allo stato 16
    LOGICEXPR  prosecuzione allo stato 17
    EXPR       prosecuzione allo stato 18
    TYPEVAL    prosecuzione allo stato 19


stato 2

    0 $accept: LINE $end .

    $default  accetta


stato 3

    7 VARDECL: VAR . ID COLON INTKEYWORD ASSIGNMENT EXPR
    8        | VAR . ID COLON FLOATKEYWORD ASSIGNMENT EXPR
    9        | VAR . ID COLON BOOLEANKEYWORD ASSIGNMENT EXPR
   10        | VAR . ID COLON STRINGKEYWORD ASSIGNMENT EXPR

    ID  shift e prosecuzione allo stato 20


stato 4

   11 IFSTMT: IF . LPAREN LOGICEXPR RPAREN STARTOFSCOPE LINE ELSE LINE ENDOFSCOPE
   12       | IF . LPAREN LOGICEXPR RPAREN STARTOFSCOPE LINE ENDOFSCOPE

    LPAREN  shift e prosecuzione allo stato 21


stato 5

   23 EXPR: LPAREN . EXPR RPAREN

    LPAREN       shift e prosecuzione allo stato 5
    ID           shift e prosecuzione allo stato 9
    INTEGERTYPE  shift e prosecuzione allo stato 10
    FLOATTYPE    shift e prosecuzione allo stato 11
    BOOLEANTYPE  shift e prosecuzione allo stato 12
    STRINGTYPE   shift e prosecuzione allo stato 13

    EXPR     prosecuzione allo stato 22
    TYPEVAL  prosecuzione allo stato 19


stato 6

   15 LOGICEXPR: TRUEVAL .

    $default  riduzione con la regola 15 (LOGICEXPR)


stato 7

   16 LOGICEXPR: FALSEVAL .

    $default  riduzione con la regola 16 (LOGICEXPR)


stato 8

   13 FUNCTION: FUNCTIONDECL . LPAREN VARDECL RPAREN STARTOFSCOPE LINE ENDOFSCOPE
   14         | FUNCTIONDECL . LPAREN RPAREN STARTOFSCOPE LINE ENDOFSCOPE

    LPAREN  shift e prosecuzione allo stato 23


stato 9

   25 EXPR: ID .

    $default  riduzione con la regola 25 (EXPR)


stato 10

   26 TYPEVAL: INTEGERTYPE .

    $default  riduzione con la regola 26 (TYPEVAL)


stato 11

   27 TYPEVAL: FLOATTYPE .

    $default  riduzione con la regola 27 (TYPEVAL)


stato 12

   28 TYPEVAL: BOOLEANTYPE .

    $default  riduzione con la regola 28 (TYPEVAL)


stato 13

   29 TYPEVAL: STRINGTYPE .

    $default  riduzione con la regola 29 (TYPEVAL)


stato 14

    2 LINE: LINE VARDECL . ENDOFSTMT

    ENDOFSTMT  shift e prosecuzione allo stato 24


stato 15

    5 LINE: LINE IFSTMT . ENDOFSTMT

    ENDOFSTMT  shift e prosecuzione allo stato 25


stato 16

    6 LINE: LINE FUNCTION . ENDOFSTMT

    ENDOFSTMT  shift e prosecuzione allo stato 26


stato 17

    4 LINE: LINE LOGICEXPR . ENDOFSTMT

    ENDOFSTMT  shift e prosecuzione allo stato 27


stato 18

    3 LINE: LINE EXPR . ENDOFSTMT
   17 LOGICEXPR: EXPR . GREATER EXPR
   18 EXPR: EXPR . PLUS EXPR
   19     | EXPR . MINUS EXPR
   20     | EXPR . PER EXPR
   21     | EXPR . DIV EXPR
   22     | EXPR . MOD EXPR

    ENDOFSTMT  shift e prosecuzione allo stato 28
    PLUS       shift e prosecuzione allo stato 29
    MINUS      shift e prosecuzione allo stato 30
    PER        shift e prosecuzione allo stato 31
    DIV        shift e prosecuzione allo stato 32
    MOD        shift e prosecuzione allo stato 33
    GREATER    shift e prosecuzione allo stato 34


stato 19

   24 EXPR: TYPEVAL .

    $default  riduzione con la regola 24 (EXPR)


stato 20

    7 VARDECL: VAR ID . COLON INTKEYWORD ASSIGNMENT EXPR
    8        | VAR ID . COLON FLOATKEYWORD ASSIGNMENT EXPR
    9        | VAR ID . COLON BOOLEANKEYWORD ASSIGNMENT EXPR
   10        | VAR ID . COLON STRINGKEYWORD ASSIGNMENT EXPR

    COLON  shift e prosecuzione allo stato 35


stato 21

   11 IFSTMT: IF LPAREN . LOGICEXPR RPAREN STARTOFSCOPE LINE ELSE LINE ENDOFSCOPE
   12       | IF LPAREN . LOGICEXPR RPAREN STARTOFSCOPE LINE ENDOFSCOPE

    LPAREN       shift e prosecuzione allo stato 5
    TRUEVAL      shift e prosecuzione allo stato 6
    FALSEVAL     shift e prosecuzione allo stato 7
    ID           shift e prosecuzione allo stato 9
    INTEGERTYPE  shift e prosecuzione allo stato 10
    FLOATTYPE    shift e prosecuzione allo stato 11
    BOOLEANTYPE  shift e prosecuzione allo stato 12
    STRINGTYPE   shift e prosecuzione allo stato 13

    LOGICEXPR  prosecuzione allo stato 36
    EXPR       prosecuzione allo stato 37
    TYPEVAL    prosecuzione allo stato 19


stato 22

   18 EXPR: EXPR . PLUS EXPR
   19     | EXPR . MINUS EXPR
   20     | EXPR . PER EXPR
   21     | EXPR . DIV EXPR
   22     | EXPR . MOD EXPR
   23     | LPAREN EXPR . RPAREN

    RPAREN  shift e prosecuzione allo stato 38
    PLUS    shift e prosecuzione allo stato 29
    MINUS   shift e prosecuzione allo stato 30
    PER     shift e prosecuzione allo stato 31
    DIV     shift e prosecuzione allo stato 32
    MOD     shift e prosecuzione allo stato 33


stato 23

   13 FUNCTION: FUNCTIONDECL LPAREN . VARDECL RPAREN STARTOFSCOPE LINE ENDOFSCOPE
   14         | FUNCTIONDECL LPAREN . RPAREN STARTOFSCOPE LINE ENDOFSCOPE

    VAR     shift e prosecuzione allo stato 3
    RPAREN  shift e prosecuzione allo stato 39

    VARDECL  prosecuzione allo stato 40


stato 24

    2 LINE: LINE VARDECL ENDOFSTMT .

    $default  riduzione con la regola 2 (LINE)


stato 25

    5 LINE: LINE IFSTMT ENDOFSTMT .

    $default  riduzione con la regola 5 (LINE)


stato 26

    6 LINE: LINE FUNCTION ENDOFSTMT .

    $default  riduzione con la regola 6 (LINE)


stato 27

    4 LINE: LINE LOGICEXPR ENDOFSTMT .

    $default  riduzione con la regola 4 (LINE)


stato 28

    3 LINE: LINE EXPR ENDOFSTMT .

    $default  riduzione con la regola 3 (LINE)


stato 29

   18 EXPR: EXPR PLUS . EXPR

    LPAREN       shift e prosecuzione allo stato 5
    ID           shift e prosecuzione allo stato 9
    INTEGERTYPE  shift e prosecuzione allo stato 10
    FLOATTYPE    shift e prosecuzione allo stato 11
    BOOLEANTYPE  shift e prosecuzione allo stato 12
    STRINGTYPE   shift e prosecuzione allo stato 13

    EXPR     prosecuzione allo stato 41
    TYPEVAL  prosecuzione allo stato 19


stato 30

   19 EXPR: EXPR MINUS . EXPR

    LPAREN       shift e prosecuzione allo stato 5
    ID           shift e prosecuzione allo stato 9
    INTEGERTYPE  shift e prosecuzione allo stato 10
    FLOATTYPE    shift e prosecuzione allo stato 11
    BOOLEANTYPE  shift e prosecuzione allo stato 12
    STRINGTYPE   shift e prosecuzione allo stato 13

    EXPR     prosecuzione allo stato 42
    TYPEVAL  prosecuzione allo stato 19


stato 31

   20 EXPR: EXPR PER . EXPR

    LPAREN       shift e prosecuzione allo stato 5
    ID           shift e prosecuzione allo stato 9
    INTEGERTYPE  shift e prosecuzione allo stato 10
    FLOATTYPE    shift e prosecuzione allo stato 11
    BOOLEANTYPE  shift e prosecuzione allo stato 12
    STRINGTYPE   shift e prosecuzione allo stato 13

    EXPR     prosecuzione allo stato 43
    TYPEVAL  prosecuzione allo stato 19


stato 32

   21 EXPR: EXPR DIV . EXPR

    LPAREN       shift e prosecuzione allo stato 5
    ID           shift e prosecuzione allo stato 9
    INTEGERTYPE  shift e prosecuzione allo stato 10
    FLOATTYPE    shift e prosecuzione allo stato 11
    BOOLEANTYPE  shift e prosecuzione allo stato 12
    STRINGTYPE   shift e prosecuzione allo stato 13

    EXPR     prosecuzione allo stato 44
    TYPEVAL  prosecuzione allo stato 19


stato 33

   22 EXPR: EXPR MOD . EXPR

    LPAREN       shift e prosecuzione allo stato 5
    ID           shift e prosecuzione allo stato 9
    INTEGERTYPE  shift e prosecuzione allo stato 10
    FLOATTYPE    shift e prosecuzione allo stato 11
    BOOLEANTYPE  shift e prosecuzione allo stato 12
    STRINGTYPE   shift e prosecuzione allo stato 13

    EXPR     prosecuzione allo stato 45
    TYPEVAL  prosecuzione allo stato 19


stato 34

   17 LOGICEXPR: EXPR GREATER . EXPR

    LPAREN       shift e prosecuzione allo stato 5
    ID           shift e prosecuzione allo stato 9
    INTEGERTYPE  shift e prosecuzione allo stato 10
    FLOATTYPE    shift e prosecuzione allo stato 11
    BOOLEANTYPE  shift e prosecuzione allo stato 12
    STRINGTYPE   shift e prosecuzione allo stato 13

    EXPR     prosecuzione allo stato 46
    TYPEVAL  prosecuzione allo stato 19


stato 35

    7 VARDECL: VAR ID COLON . INTKEYWORD ASSIGNMENT EXPR
    8        | VAR ID COLON . FLOATKEYWORD ASSIGNMENT EXPR
    9        | VAR ID COLON . BOOLEANKEYWORD ASSIGNMENT EXPR
   10        | VAR ID COLON . STRINGKEYWORD ASSIGNMENT EXPR

    INTKEYWORD      shift e prosecuzione allo stato 47
    FLOATKEYWORD    shift e prosecuzione allo stato 48
    BOOLEANKEYWORD  shift e prosecuzione allo stato 49
    STRINGKEYWORD   shift e prosecuzione allo stato 50


stato 36

   11 IFSTMT: IF LPAREN LOGICEXPR . RPAREN STARTOFSCOPE LINE ELSE LINE ENDOFSCOPE
   12       | IF LPAREN LOGICEXPR . RPAREN STARTOFSCOPE LINE ENDOFSCOPE

    RPAREN  shift e prosecuzione allo stato 51


stato 37

   17 LOGICEXPR: EXPR . GREATER EXPR
   18 EXPR: EXPR . PLUS EXPR
   19     | EXPR . MINUS EXPR
   20     | EXPR . PER EXPR
   21     | EXPR . DIV EXPR
   22     | EXPR . MOD EXPR

    PLUS     shift e prosecuzione allo stato 29
    MINUS    shift e prosecuzione allo stato 30
    PER      shift e prosecuzione allo stato 31
    DIV      shift e prosecuzione allo stato 32
    MOD      shift e prosecuzione allo stato 33
    GREATER  shift e prosecuzione allo stato 34


stato 38

   23 EXPR: LPAREN EXPR RPAREN .

    $default  riduzione con la regola 23 (EXPR)


stato 39

   14 FUNCTION: FUNCTIONDECL LPAREN RPAREN . STARTOFSCOPE LINE ENDOFSCOPE

    STARTOFSCOPE  shift e prosecuzione allo stato 52


stato 40

   13 FUNCTION: FUNCTIONDECL LPAREN VARDECL . RPAREN STARTOFSCOPE LINE ENDOFSCOPE

    RPAREN  shift e prosecuzione allo stato 53


stato 41

   18 EXPR: EXPR . PLUS EXPR
   18     | EXPR PLUS EXPR .
   19     | EXPR . MINUS EXPR
   20     | EXPR . PER EXPR
   21     | EXPR . DIV EXPR
   22     | EXPR . MOD EXPR

    PER  shift e prosecuzione allo stato 31
    DIV  shift e prosecuzione allo stato 32
    MOD  shift e prosecuzione allo stato 33

    $default  riduzione con la regola 18 (EXPR)


stato 42

   18 EXPR: EXPR . PLUS EXPR
   19     | EXPR . MINUS EXPR
   19     | EXPR MINUS EXPR .
   20     | EXPR . PER EXPR
   21     | EXPR . DIV EXPR
   22     | EXPR . MOD EXPR

    PER  shift e prosecuzione allo stato 31
    DIV  shift e prosecuzione allo stato 32
    MOD  shift e prosecuzione allo stato 33

    $default  riduzione con la regola 19 (EXPR)


stato 43

   18 EXPR: EXPR . PLUS EXPR
   19     | EXPR . MINUS EXPR
   20     | EXPR . PER EXPR
   20     | EXPR PER EXPR .
   21     | EXPR . DIV EXPR
   22     | EXPR . MOD EXPR

    $default  riduzione con la regola 20 (EXPR)


stato 44

   18 EXPR: EXPR . PLUS EXPR
   19     | EXPR . MINUS EXPR
   20     | EXPR . PER EXPR
   21     | EXPR . DIV EXPR
   21     | EXPR DIV EXPR .
   22     | EXPR . MOD EXPR

    $default  riduzione con la regola 21 (EXPR)


stato 45

   18 EXPR: EXPR . PLUS EXPR
   19     | EXPR . MINUS EXPR
   20     | EXPR . PER EXPR
   21     | EXPR . DIV EXPR
   22     | EXPR . MOD EXPR
   22     | EXPR MOD EXPR .

    $default  riduzione con la regola 22 (EXPR)


stato 46

   17 LOGICEXPR: EXPR GREATER EXPR .
   18 EXPR: EXPR . PLUS EXPR
   19     | EXPR . MINUS EXPR
   20     | EXPR . PER EXPR
   21     | EXPR . DIV EXPR
   22     | EXPR . MOD EXPR

    PLUS   shift e prosecuzione allo stato 29
    MINUS  shift e prosecuzione allo stato 30
    PER    shift e prosecuzione allo stato 31
    DIV    shift e prosecuzione allo stato 32
    MOD    shift e prosecuzione allo stato 33

    $default  riduzione con la regola 17 (LOGICEXPR)


stato 47

    7 VARDECL: VAR ID COLON INTKEYWORD . ASSIGNMENT EXPR

    ASSIGNMENT  shift e prosecuzione allo stato 54


stato 48

    8 VARDECL: VAR ID COLON FLOATKEYWORD . ASSIGNMENT EXPR

    ASSIGNMENT  shift e prosecuzione allo stato 55


stato 49

    9 VARDECL: VAR ID COLON BOOLEANKEYWORD . ASSIGNMENT EXPR

    ASSIGNMENT  shift e prosecuzione allo stato 56


stato 50

   10 VARDECL: VAR ID COLON STRINGKEYWORD . ASSIGNMENT EXPR

    ASSIGNMENT  shift e prosecuzione allo stato 57


stato 51

   11 IFSTMT: IF LPAREN LOGICEXPR RPAREN . STARTOFSCOPE LINE ELSE LINE ENDOFSCOPE
   12       | IF LPAREN LOGICEXPR RPAREN . STARTOFSCOPE LINE ENDOFSCOPE

    STARTOFSCOPE  shift e prosecuzione allo stato 58


stato 52

   14 FUNCTION: FUNCTIONDECL LPAREN RPAREN STARTOFSCOPE . LINE ENDOFSCOPE

    $default  riduzione con la regola 1 (LINE)

    LINE  prosecuzione allo stato 59


stato 53

   13 FUNCTION: FUNCTIONDECL LPAREN VARDECL RPAREN . STARTOFSCOPE LINE ENDOFSCOPE

    STARTOFSCOPE  shift e prosecuzione allo stato 60


stato 54

    7 VARDECL: VAR ID COLON INTKEYWORD ASSIGNMENT . EXPR

    LPAREN       shift e prosecuzione allo stato 5
    ID           shift e prosecuzione allo stato 9
    INTEGERTYPE  shift e prosecuzione allo stato 10
    FLOATTYPE    shift e prosecuzione allo stato 11
    BOOLEANTYPE  shift e prosecuzione allo stato 12
    STRINGTYPE   shift e prosecuzione allo stato 13

    EXPR     prosecuzione allo stato 61
    TYPEVAL  prosecuzione allo stato 19


stato 55

    8 VARDECL: VAR ID COLON FLOATKEYWORD ASSIGNMENT . EXPR

    LPAREN       shift e prosecuzione allo stato 5
    ID           shift e prosecuzione allo stato 9
    INTEGERTYPE  shift e prosecuzione allo stato 10
    FLOATTYPE    shift e prosecuzione allo stato 11
    BOOLEANTYPE  shift e prosecuzione allo stato 12
    STRINGTYPE   shift e prosecuzione allo stato 13

    EXPR     prosecuzione allo stato 62
    TYPEVAL  prosecuzione allo stato 19


stato 56

    9 VARDECL: VAR ID COLON BOOLEANKEYWORD ASSIGNMENT . EXPR

    LPAREN       shift e prosecuzione allo stato 5
    ID           shift e prosecuzione allo stato 9
    INTEGERTYPE  shift e prosecuzione allo stato 10
    FLOATTYPE    shift e prosecuzione allo stato 11
    BOOLEANTYPE  shift e prosecuzione allo stato 12
    STRINGTYPE   shift e prosecuzione allo stato 13

    EXPR     prosecuzione allo stato 63
    TYPEVAL  prosecuzione allo stato 19


stato 57

   10 VARDECL: VAR ID COLON STRINGKEYWORD ASSIGNMENT . EXPR

    LPAREN       shift e prosecuzione allo stato 5
    ID           shift e prosecuzione allo stato 9
    INTEGERTYPE  shift e prosecuzione allo stato 10
    FLOATTYPE    shift e prosecuzione allo stato 11
    BOOLEANTYPE  shift e prosecuzione allo stato 12
    STRINGTYPE   shift e prosecuzione allo stato 13

    EXPR     prosecuzione allo stato 64
    TYPEVAL  prosecuzione allo stato 19


stato 58

   11 IFSTMT: IF LPAREN LOGICEXPR RPAREN STARTOFSCOPE . LINE ELSE LINE ENDOFSCOPE
   12       | IF LPAREN LOGICEXPR RPAREN STARTOFSCOPE . LINE ENDOFSCOPE

    $default  riduzione con la regola 1 (LINE)

    LINE  prosecuzione allo stato 65


stato 59

    2 LINE: LINE . VARDECL ENDOFSTMT
    3     | LINE . EXPR ENDOFSTMT
    4     | LINE . LOGICEXPR ENDOFSTMT
    5     | LINE . IFSTMT ENDOFSTMT
    6     | LINE . FUNCTION ENDOFSTMT
   14 FUNCTION: FUNCTIONDECL LPAREN RPAREN STARTOFSCOPE LINE . ENDOFSCOPE

    VAR           shift e prosecuzione allo stato 3
    IF            shift e prosecuzione allo stato 4
    ENDOFSCOPE    shift e prosecuzione allo stato 66
    LPAREN        shift e prosecuzione allo stato 5
    TRUEVAL       shift e prosecuzione allo stato 6
    FALSEVAL      shift e prosecuzione allo stato 7
    FUNCTIONDECL  shift e prosecuzione allo stato 8
    ID            shift e prosecuzione allo stato 9
    INTEGERTYPE   shift e prosecuzione allo stato 10
    FLOATTYPE     shift e prosecuzione allo stato 11
    BOOLEANTYPE   shift e prosecuzione allo stato 12
    STRINGTYPE    shift e prosecuzione allo stato 13

    VARDECL    prosecuzione allo stato 14
    IFSTMT     prosecuzione allo stato 15
    FUNCTION   prosecuzione allo stato 16
    LOGICEXPR  prosecuzione allo stato 17
    EXPR       prosecuzione allo stato 18
    TYPEVAL    prosecuzione allo stato 19


stato 60

   13 FUNCTION: FUNCTIONDECL LPAREN VARDECL RPAREN STARTOFSCOPE . LINE ENDOFSCOPE

    $default  riduzione con la regola 1 (LINE)

    LINE  prosecuzione allo stato 67


stato 61

    7 VARDECL: VAR ID COLON INTKEYWORD ASSIGNMENT EXPR .
   18 EXPR: EXPR . PLUS EXPR
   19     | EXPR . MINUS EXPR
   20     | EXPR . PER EXPR
   21     | EXPR . DIV EXPR
   22     | EXPR . MOD EXPR

    PLUS   shift e prosecuzione allo stato 29
    MINUS  shift e prosecuzione allo stato 30
    PER    shift e prosecuzione allo stato 31
    DIV    shift e prosecuzione allo stato 32
    MOD    shift e prosecuzione allo stato 33

    $default  riduzione con la regola 7 (VARDECL)


stato 62

    8 VARDECL: VAR ID COLON FLOATKEYWORD ASSIGNMENT EXPR .
   18 EXPR: EXPR . PLUS EXPR
   19     | EXPR . MINUS EXPR
   20     | EXPR . PER EXPR
   21     | EXPR . DIV EXPR
   22     | EXPR . MOD EXPR

    PLUS   shift e prosecuzione allo stato 29
    MINUS  shift e prosecuzione allo stato 30
    PER    shift e prosecuzione allo stato 31
    DIV    shift e prosecuzione allo stato 32
    MOD    shift e prosecuzione allo stato 33

    $default  riduzione con la regola 8 (VARDECL)


stato 63

    9 VARDECL: VAR ID COLON BOOLEANKEYWORD ASSIGNMENT EXPR .
   18 EXPR: EXPR . PLUS EXPR
   19     | EXPR . MINUS EXPR
   20     | EXPR . PER EXPR
   21     | EXPR . DIV EXPR
   22     | EXPR . MOD EXPR

    PLUS   shift e prosecuzione allo stato 29
    MINUS  shift e prosecuzione allo stato 30
    PER    shift e prosecuzione allo stato 31
    DIV    shift e prosecuzione allo stato 32
    MOD    shift e prosecuzione allo stato 33

    $default  riduzione con la regola 9 (VARDECL)


stato 64

   10 VARDECL: VAR ID COLON STRINGKEYWORD ASSIGNMENT EXPR .
   18 EXPR: EXPR . PLUS EXPR
   19     | EXPR . MINUS EXPR
   20     | EXPR . PER EXPR
   21     | EXPR . DIV EXPR
   22     | EXPR . MOD EXPR
